# niuma

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml
docs/: PRD.md
niuma/: __init__.py  config.py
niuma/agents/: __init__.py  code.py  factory.py  orchestrator.py  research.py  review.py  test.py
niuma/api/: __init__.py  main.py
niuma/api/routes/: __init__.py  agents.py  memory.py  tasks.py  tools.py
niuma/cli/: __init__.py  main.py
niuma/core/: __init__.py  agent.py  background.py  cognitive.py  messaging.py  scheduler.py  task.py
niuma/isolation/: __init__.py  worktree.py
niuma/llm/: __init__.py  client.py
niuma/memory/: __init__.py  long_term.py  manager.py  short_term.py  vector_store.py
niuma/protocol/: __init__.py  team.py
niuma/skills/: __init__.py  manager.py
niuma/tools/: __init__.py  registry.py
niuma/tools/builtin/: __init__.py  file.py  shell.py
niuma/tools/mcp/: __init__.py  client.py
niuma/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_agent_factory.py  test_config.py  test_memory.py  test_task.py
